[package]
name = "exclusion-set"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "a lock-free concurrent set"
homepage = "https://github.com/geeklint/exclusion-set"
repository = "https://github.com/geeklint/exclusion-set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]